	  sim/ucsim/stm8.src/stm8mac.h,
	  sim/ucsim/stm8.src/glob.cc,
	  sim/ucsim/stm8.src/stm8.cc,
	  sdas/asstm8/stm8mch.c:
	  STM8: Patches by Valentin Dudouyt to fix simulator.
	* src/stm8/gen.c:
	  STM8: Fix conditional jump, addres generation for on-stack variables.
	* device/lib/_mullong.c,
	  device/lib/_mulint.c,
	  device/lib/stm8/Makefile.in,
	  device/lib/_mulschar.c,
	  src/SDCCsymt.c,
	  src/stm8/main.c:
	  STM8: Multiplication and division fixes.

2013-05-18 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  STM8: Fix offset in wide addition, fix handling of a in copy from registers to global, fix stack adjustment for large variables, fix large arithmetic signed right shift.

2013-05-18 Maarten Brock <sourceforge.brock AT dse.nl>

	* doc/INSTALL.txt: small update
	* support/scripts/repack_release.sh: added windows x64 setup

2013-05-17 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  STM8: Fix bit-field access.
	* sim/ucsim/stm8.src/inst.cc:
	  STM8: Fix handling of carry bit in negation in simulator.

2013-05-16 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/main.c:
	  STM8: Fix endianness for initializers.

2013-05-15 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/ports/stm8/support.c:
	  STM8: Remove unneeded global variable that clashes with identifiers in regression tests.
	* support/regression/tests/malloc.c,
	  support/regression/tests/gcc-torture-execute-920810-1.c:
	  STM8: Disable regression tests for unimplemented malloc().
	* src/stm8/gen.c:
	  STM8: Fix saving of a in early stack-to-stack copy, fix offset in stacked register operand, fix handling of operand in wide register in pointer set, fix endless loop in shifts.

2013-05-12 Philipp Klaus Krause <pkk AT spth.de>

	* sim/ucsim/stm8.src/inst.cc:
	  STM8: Fix clr, partially by patch by Valentin Dudouyt.
	* src/stm8/main.c:
	  STM8:  Patch by Valentin Dudouyt to initialize global and static variables to zero.
